# homework_python_basic

./: README.md  requirements.txt  requirements_1.txt
.github/workflows/: homework_10_tests.yml  run_tests.yml
diploma_project/finproject/: README.md  docker-compose.yaml  requirements.txt
diploma_project/finproject/data/: data_file.json
diploma_project/finproject/fin/: forms.py  models.py  urls.py  views.py
diploma_project/finproject/finauth/: models.py
diploma_project/finproject/finproject/: settings.py  urls.py
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile
homework_03/web-app/: main.py  pyproject.toml
homework_03/web-app/web_app/: app.py
homework_04/: jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_04/posts-project/: pyproject.toml
homework_04/posts-project/tests/: test_posts_project.py
homework_04/postsproject/: jsonplaceholder_requests.py  main.py  models.py  pyproject.toml
homework_05/: pyproject.toml
homework_05/templates/: about.html  base.html  index.html
homework_06/: Dockerfile  app.py  docker-compose.yaml  postgres.env  prestart.sh  pyproject.toml  requirements.txt
homework_06/migrations/versions/: 906a9b7d4037_initial_migration_create_user_and_post_.py
homework_06/models/: __init__.py  models.py
homework_06/static/css/: bootstrap.css
homework_06/templates/: base.html
homework_06/templates/users/: add.html  detail.html  list.html
homework_06/views/: users.py
homework_08/finproject/: docker-compose.yaml
optional_training/: clases.py
(+49 files in other folders)
