[tool.poetry]
name = "postsproject"
version = "0.1.0"
description = ""
authors = ["Andrey Perekosov"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
SQLAlchemy = "^1.4.23"
asyncpg = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
docker = "^5.0.0"
requests = "^2.26.0"
Faker = "^8.12.1"
pytest-asyncio = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
