[tool.poetry]
name = "homework_05"
version = "0.1.0"
description = ""
authors = ["Andrey Perekosov <perekosov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]
docker = "^5.0.2"
requests = "^2.26.0"
Faker = "^8.12.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
