[tool.poetry]
name = "postsproject"
version = "0.1.0"
description = ""
authors = ["Andrey Perekosov"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
SQLAlchemy = "^1.4.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
